2013-09-16  Per Bothner  <per@bothner.com>

	* ClassType.java (JDK_1_8_VERSION): New constant.

	* CodeAttr.java (emitNewArray): Fix logic error noted by
	Charles Turner.

2013-07-18  Per Bothner  <per@bothner.com>

	* Variable.java (freeLocal): Avoid out-of-bounds indexing of
	local_types array.  This fixes Savannah bug # 39151
	"ArrayOutOfBoundsException in Variable.freeLocal".

2013-07-11  Per Bothner  <per@bothner.com>

	* CodeAttr.java (pushAutoPoppableScope): New method.
	(popScope): Keep popping Scopes until we pop a non-autoPop Scope.
	* Scope.java (autoPop): New field.

	* Scope.java (getStartLabel, getEndLabel): New accessor methods.

	* CodeAttr.java (emitTailCall): Add overloaded method.

2013-06-28  Per Bothner  <per@bothner.com>

	* ClassType.java (writeToStream): Set ADD_ENCLOSING_DONE
	in addition to ADD_FIELDS_DONE and ADD_METHODS_DONE.

2013-06-02  Per Bothner  <per@bothner.com>

	* Type.java (isCompatibleWithValue): New method.
	(lowestCommonSuperType): Minor bullet-proofing.

2013-02-10  Per Bothner  <per@bothner.com>

	* Type.java (lowestCommonSuperType): Minor tweak.

2012-12-12  thomas kirk  <tk@research.att.com>

	* ZipLoader.java (loadAllClasses): Don't load duplicate.
	Fixes Savannah bug #37910 "gnu.bytecode.ZipLoader:loadAllClasses
	not checking for previous definitions".

2012-12-09  Per Bothner  <per@bothner.com>

	* TypeVariable.java: @Override annotation should not be in comment.
	* ParameterizedType.java: Likewise.

2012-11-05  Per Bothner  <per@bothner.com>

	Fix bug in encodding of enum annotation values.  They should
	use the enum type's descriptor (signature), not "internal name".
	* AnnotationEntry.java (decodeEnumEntry): New static method.
	(print): Use it.
	* RuntimeAnnotationsAttr.java (assignConstants): Use decodeEnumEntry.
	* ClassType.java (nameToSignature): New static method.
	(setName): Use it.

2012-10-06  Per Bothner  <per@bothner.com>

	Change so reading a class cann detecte neverReturnsType easily.