@@ -1,3 +1,8 @@
+2013-11-07  Per Bothner  <per@bothner.com>
+
+	* ArrayClassLoader.java (loadClass): Fix logic error from change
+	made 2008-05-10.  Fixes bug reported by Charles Turner.
+
 2013-09-16  Per Bothner  <per@bothner.com>
 
 	* ClassType.java (JDK_1_8_VERSION): New constant.
